fix bug on Safari

--- a/css/style.css
+++ b/css/style.css
@@ -366,10 +366,10 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  gap: 0.5rem;
+  gap: 0.3rem;
 }
 .featured__image {
-  width: 100%;
+  height: 1rem;
   -webkit-filter: brightness(0);
           filter: brightness(0);
   opacity: 50%;
@@ -380,12 +380,23 @@ body {
     margin-bottom: 2rem;
     font-size: 1.4rem;
   }
+  .featured__image {
+    height: 1.8rem;
+  }
 }
 @media (min-width: 768px) {
   .featured__title {
     font-size: 1.6rem;
   }
   .featured__box {
-    gap: 4rem;
+    gap: 2rem;
+  }
+  .featured__image {
+    height: 2.4rem;
+  }
+}
+@media (min-width: 922px) {
+  .featured__image {
+    height: 2.8rem;
   }
 }/*# sourceMappingURL=style.css.map */
