--- a/sass/modules/_featured.scss
+++ b/sass/modules/_featured.scss
@@ -9,10 +9,10 @@
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
-		gap: 0.5rem;
+		gap: 0.3rem;
 	}
 	&__image {
-		width: 100%;
+		height: 1rem;
 		filter: brightness(0);
 		opacity: 50%;
 	}
@@ -24,6 +24,9 @@
 			margin-bottom: 2rem;
 			font-size: 1.4rem;
 		}
+		&__image {
+			height: 1.8rem;
+		}
 	}
 }
 
@@ -33,7 +36,18 @@
 			font-size: 1.6rem;
 		}
 		&__box {
-			gap: 4rem;
+			gap: 2rem;
+		}
+		&__image {
+			height: 2.4rem;
+		}
+	}
+}
+
+@media (min-width: 922px) {
+	.featured {
+		&__image {
+			height: 2.8rem;
 		}
 	}
 }
